[gd_scene load_steps=9 format=3 uid="uid://cnlev2iwtj1pr"]

[ext_resource type="Script" path="res://addons/ridiculous_stream/instances/pnl_settings.gd" id="1_5rbjj"]
[ext_resource type="PackedScene" uid="uid://gi6k83qtu4y2" path="res://addons/ridiculous_stream/instances/pnl_rs_setting.tscn" id="1_7lr6v"]
[ext_resource type="PackedScene" uid="uid://cmm5f6140s4jm" path="res://addons/ridiculous_stream/instances/pnl_test.tscn" id="2_06h4g"]
[ext_resource type="PackedScene" uid="uid://dc02d6u648u1j" path="res://addons/ridiculous_stream/instances/pnl_twitch_user_fields.tscn" id="3_tus6h"]
[ext_resource type="PackedScene" uid="uid://cqlaadcvsfhpq" path="res://addons/ridiculous_stream/instances/pnl_twitch_user_list.tscn" id="4_j0n41"]
[ext_resource type="PackedScene" uid="uid://rvb1iyen7vu3" path="res://addons/ridiculous_stream/instances/pnl_redeems.tscn" id="4_tssrk"]
[ext_resource type="Texture2D" uid="uid://bykc5hku6ubu8" path="res://addons/ridiculous_stream/icon_irad.png" id="5_pus7l"]
[ext_resource type="Texture2D" uid="uid://b4gxd48s477ky" path="res://addons/ridiculous_stream/icon-github.png" id="6_e1vcs"]

[node name="pnl_settings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rbjj")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hsplit" type="HBoxContainer" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="vsplit" type="VSplitContainer" parent="vb/hsplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="pnl_rs_settings" parent="vb/hsplit/vsplit" instance=ExtResource("1_7lr6v")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_test" parent="vb/hsplit/vsplit" instance=ExtResource("2_06h4g")]
unique_name_in_owner = true
layout_mode = 2

[node name="hsplit" type="HSplitContainer" parent="vb/hsplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="pnl_twitch_user_list" parent="vb/hsplit/hsplit" instance=ExtResource("4_j0n41")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_twitch_user_fields" parent="vb/hsplit/hsplit" instance=ExtResource("3_tus6h")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="pnl_redeems" parent="vb/hsplit" instance=ExtResource("4_tssrk")]
unique_name_in_owner = true
layout_mode = 2

[node name="bot" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="btn_hot_reload" type="Button" parent="vb/bot"]
layout_mode = 2
text = "Re-instatiate window"

[node name="sep" type="VSeparator" parent="vb/bot"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/bot"]
layout_mode = 2
text = "Credits"

[node name="btn_open_irad_twitch" type="Button" parent="vb/bot"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
icon = ExtResource("5_pus7l")
icon_alignment = 1
expand_icon = true

[node name="btn_open_github" type="Button" parent="vb/bot"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
icon = ExtResource("6_e1vcs")
icon_alignment = 1
expand_icon = true

[node name="btn_credits_gift" type="Button" parent="vb/bot"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gift | by Issork"

[node name="btn_credits_twitcher" type="Button" parent="vb/bot"]
layout_mode = 2
size_flags_horizontal = 3
text = "Twitcher | by Kani_dev"

[node name="btn_credits_noobs" type="Button" parent="vb/bot"]
layout_mode = 2
size_flags_horizontal = 3
text = "No OBS ws | by TheYagich"

[node name="btn_credits_polygon" type="Button" parent="vb/bot"]
layout_mode = 2
size_flags_horizontal = 3
text = "Polygon 2d fracture | by SoloBits"

[connection signal="pressed" from="vb/bot/btn_hot_reload" to="." method="_on_btn_hot_reload_pressed"]
[connection signal="pressed" from="vb/bot/btn_open_irad_twitch" to="." method="_on_btn_open_irad_twitch_pressed"]
[connection signal="pressed" from="vb/bot/btn_open_github" to="." method="_on_btn_open_github_pressed"]
[connection signal="pressed" from="vb/bot/btn_credits_gift" to="." method="_on_btn_credits_gift_pressed"]
[connection signal="pressed" from="vb/bot/btn_credits_twitcher" to="." method="_on_btn_credits_twitcher_pressed"]
[connection signal="pressed" from="vb/bot/btn_credits_noobs" to="." method="_on_btn_credits_noobs_pressed"]
[connection signal="pressed" from="vb/bot/btn_credits_polygon" to="." method="_on_btn_credits_polygon_pressed"]
